Documentation edits made through Mintlify web editor

--- a/nxtcore-WLinhaltsverzeichnis.mdx
+++ b/nxtcore-WLinhaltsverzeichnis.mdx
@@ -99,3 +99,36 @@ mode: "wide"
   User Connection Banns\
   User Connections
 </Accordion>
+
+<Accordion title="Admin" description='Beschreibung aller Funktionen in der Rubrik "Admin"' icon="sparkles">
+  Folg
+
+  ende Menüs werden der Reihenfolge nach erklärt:\
+  \
+  Berechtigung\
+  Mitglieder Rollen\
+  Übersetzungen
+</Accordion>
+
+<Accordion title="Mails" description='Beschreibung aller Funktionen in der Rubrik "Mails"' icon="sparkles">
+  Folgende Menüs werden der Reihenfolge nach erklärt:\
+  \
+  Mail Templates
+</Accordion>
+
+<Accordion title="Turnier" description='Beschreibung aller Funktionen in der Rubrik "Turnier"' icon="sparkles">
+  Folgende Menüs werden der Reihenfolge nach erklärt:\
+  \
+  Games\
+  Regelwerke\
+  Turnier Serien\
+  Turniere
+</Accordion>
+
+<Accordion title="Utils" description='Beschreibung aller Funktionen in der Rubrik "Utils"' icon="sparkles">
+  Folgende Menüs werden der Reihenfolge nach erklärt:\
+  \
+  Alerts\
+  Dyn. Routen\
+  Logs
+</Accordion>
